# poetry-fastapi-todo-app

./: .dockerignore  .env.example  Dockerfile  database.py  dependencies.py  docker-compose.yml  main.py  pyproject.toml
tests/: test_todo.py  test_user.py
todo/: models.py  schema.py  todos.py
user/: models.py  users.py
