[tool.poetry]
name = "poetry-todo"
version = "0.1.0"
description = ""
authors = ["JalilUmar <jalil786.umer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
sqlmodel = "^0.0.16"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.6.4"}
nanoid = "^2.0.0"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
pytest = "^8.1.1"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
